multiplicative bias correction in python getdist and tidies

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -1,38 +1,45 @@
-
-num_contours = 3
-contour1 = 0.68
-contour2 = 0.95
-contour3 = 0.99
+#Confidence limits for marginalized constraints. 
+#Also used for 2D plots, but only number set by plot settings shown
+contours = 0.68 0.95 0.99
 
 #If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
 #of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
 #Note credible interval depend on smoothing
 credible_interval_threshold = 0.05
 
+#Confidence limit to use for convergence tests (splits and Raftery Lewis)
 converge_test_limit = 0.95
 
-#Number of output bins for plotting, and relative scale of the Gaussian kernel
-#Should check plots are robust to changes in these parameters.
+#Number of output bins for 1D plots
 num_bins = 100
-num_bins_2D=40
 
-smooth_scale_1D =0.25
 #if >= 1 smooth by smooth_scale_1D bin widths
-#if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
+#if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.5 is often good)
 #if < 0 uses automatic smoothing length (changes with parameter)
 #-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
+#if mult_bias_correction_order>0 then generally want larger smoothing scale than for basic density estimate
+smooth_scale_1D =0.35
+
 
 #0 is basic normalization correction
 #1 is linear boundary kernel (should get gradient correct)
-boundary_correction_method=1
+#2 is a higher order kernel, that also affects estimates way from the boundary
+boundary_correction_order=1
 
-smooth_correct_contours = T
+#Correct for (e.g. variance) biases by re-estimating using fhat  Win (x) (P/fhat)
+#where fhat is the first (previous) estimate, and Win (x) P is simple kernel density estimate
+#Can do mult_bias_correction_order iterations, but oes not converge; 
+#1 usually good unless lots of samples and odd shape
+mult_bias_correction_order = 1
+
+#output bins for plotting
+num_bins_2D=40
 
 #For 2D this is the smoothing scale relative to the bin size
-smooth_scale_2D =2
+smooth_scale_2D = 3
 
 #maximum correlation ellipticity to allow for 2D kernels. Set to 0 to force non-elliptical.
 max_corr_2D = 0.95
 
-#for 3d plots
+#number of points for 3d plots
 max_scatter_points = 2000
