getdist fixes, logging, refactors etc

--- a/disttest.ini
+++ b/disttest.ini
@@ -1,8 +1,12 @@
+#Uncomment this to use latest default python getdist settings (better)
+#DEFAULT(python/getdist/analysis_defaults.ini)
+
+#This is default from Planck 2015 initial release 
 DEFAULT(batch2/getdist_common.ini)
 
 file_root = PLA/base/plikHM_TT_lowTEB_lensing/base_plikHM_TT_lowTEB_lensing
 #ingore_rows=0.3 is good for new chains, zero is good for burn-removed chains as in the PLA
-ignore_rows=0
+ignore_rows=0.3
 
 #plot_data_dir is where output plotting files are stored. The directory must exist.
 plot_data_dir= ./plot_data
@@ -12,7 +16,7 @@ plot1 = ns omegabh2
 
 
 out_dir = ./
-no_tests=T
+no_tests=F
 
 #set no_plots=F if you want plot_data generated. 
 #(you can now plot without pre-generating plot_data files)
