slightly smarter auto-ranges; PCA from GUI, make_plots getdist option

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -1,11 +1,19 @@
 #Confidence limits for marginalized constraints. 
-#Also used for 2D plots, but only number set by plot settings shown
+#Also used for 2D plots, but only number set by plot settings actually shown
 contours = 0.68 0.95 0.99
 
 #If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
 #of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
 #Note credible interval depends on smoothing
 credible_interval_threshold = 0.05
+
+#Determine bounds from projected ND confidence range for contours[ND_contour_range]
+#If -1 use bounds determined entirely from 1D marginalized densities
+#Use 0 or 1 if 2D plot contours are hitting edges
+range_ND_contour = -1
+
+#1D maringlized condidence limit to use to determine parameter ranges
+range_confidence = 0.001
 
 #Confidence limit to use for convergence tests (splits and Raftery Lewis)
 converge_test_limit = 0.95
