--- a/disttest.ini
+++ b/disttest.ini
@@ -14,11 +14,13 @@ plot_data_dir= ./plot_data
 plot_2D_num = 1
 plot1 = ns omegabh2
 
-
 out_dir = ./
 no_tests=F
 
 #set no_plots=F if you want plot_data generated. 
 #(you can now plot without pre-generating plot_data files)
 no_plots=T
+
+#if no_plots=F, make_plots=T will produce pdf from each generated plot script
+make_plots =F
 
