--- a/SZ_plus_priors.ini
+++ b/SZ_plus_priors.ini
@@ -66,7 +66,8 @@ get_sigma8=T
 param[tau]=0.09
 param[omegabh2] = 0.022 0.012 0.032 0.0001 0.0002
 param[ns] = 0.96 0.9 1.02 0.004 0.004
-
+param[logA] = 3 2 4 0.001 0.001
+param[omegach2] = 0.12 0.001 0.99 0.002 0.001
 #for PICO install from https://pypi.python.org/pypi/pypico and download data file
 #cosmology_calculator=PICO
 #pico_datafile = pico3_tailmonty_v34.dat
