fix PICO neutrino setting

--- a/distgeneric.ini
+++ b/distgeneric.ini
@@ -90,14 +90,14 @@ plot_2D_param = 0
 #if above zero, instead plot just these combinations:
 #if both zero it will plot most correlated variables
 plot_2D_num = 1
-plot1 = 1 2
+plot1 = param1 param2
 plot2 =
 
 #number of sample plots, colored by third parameter
 #if last parameter is 0 or -1 colored by the parameter most correlated
 #with one of the eigenvector directions (e.g. parallel or orthogonal to degeneracy)
 num_3D_plots = 0
-3D_plot1 = 1 2 3
+3D_plot1 = param1 param2 param3
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
@@ -107,7 +107,7 @@ triangle_params =
 matlab_colscheme =
 
 #Parameters to use. If not specified use all parameters which have lables.
-#plot_params = 1 2 3
+#plot_params = param1 param2 param3
 
 #marker[x] adds vertical line to MatLab 1D plot
 #marker[myparam] = 0
