--- a/test_pico.ini
+++ b/test_pico.ini
@@ -13,7 +13,9 @@ propose_matrix= planck_covmats/base_TT_lowTEB_plik.covmat
 action = 4
 
 #check this file for PICO settings:
+#pico_datafile=data/pico3_tailmonty_v34.dat
 DEFAULT(batch2/pico.ini)
+
 
 #everything else can be the same
 DEFAULT(batch2/common.ini)
