--- a/test_pico.ini
+++ b/test_pico.ini
@@ -1,5 +1,7 @@
 #Note PICO only supports subset of models as described on download page
 
+param[tau]=0.2
+
 #Root name for files produced
 file_root=test_pico
 
