GetDist pypi package changes, minor fixes

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -1,4 +1,4 @@
-#Confidence limits for marginalized constraints. 
+#Confidence limits for marginalized constraints.
 #Also used for 2D plots, but only number set by plot settings actually shown
 contours = 0.68 0.95 0.99
 
@@ -12,7 +12,7 @@ credible_interval_threshold = 0.05
 #Use 0 or 1 if 2D plot contours are hitting edges
 range_ND_contour = -1
 
-#1D maringlized condidence limit to use to determine parameter ranges
+#1D marginalized confidence limit to use to determine parameter ranges
 range_confidence = 0.001
 
 #Confidence limit to use for convergence tests (splits and Raftery Lewis)
@@ -26,7 +26,7 @@ fine_bins = 1024
 #if >= 1: smooth by smooth_scale_1D bin widths
 #if > 0  and <1: smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.5 is often good)
 #if < 0: automatic, with the overall smoothing length scaled by abs(smooth_scale_1D) from default
-smooth_scale_1D =-1 
+smooth_scale_1D =-1
 
 #0 is basic normalization correction
 #1 is linear boundary kernel (should get gradient correct)
