--- a/batch2/plik_dx11dr2_HM_v18_EE.ini
+++ b/batch2/plik_dx11dr2_HM_v18_EE.ini
@@ -25,12 +25,12 @@ param[calEE0]=1 0. 5. 0 0
 param[calEE1]=1 0. 5. 0 0
 param[calEE2]=1 0. 5. 0 0
 
-param[galfEE100]=0.2389987E+00 0 10 0.02 0.02
-param[galfEE100143]=0.5640458E-01 0 10 0.006 0.006
-param[galfEE100217]=0.1277198E+00 0 10 0.01 0.01
-param[galfEE143]=0.1024072E+00 0 10 0.01 0.01
-param[galfEE143217]=0.2524548E+00 0 10 0.01 0.01
-param[galfEE217]=0.7951444E+00 0 10 0.02 0.02
+param[galfEE100]=0.06  0 10 0.012 0.006
+param[galfEE100143]=0.05 0 10 0.015 0.007
+param[galfEE100217]=0.11 0 10 0.03 0.02
+param[galfEE143]=0.1 0 10 0.02 0.01
+param[galfEE143217]=0.24 0 10 0.05 0.03
+param[galfEE217]=0.72 0 10 0.15 0.07
 
 param[galfEEindex]=-2.4 -10 10 0 0
 
