python getdist tidies and streamlined options

--- a/distparams.ini
+++ b/distparams.ini
@@ -1,4 +1,5 @@
-#Params for "getdist" - for processing .txt chain information
+#sample params for "getdist" - for processing .txt chain information
+#not required if you just want to run with defaults to produce .margestats etc
 
 #set to true if you want to produce plot.py files for various standard plots
 no_tests = F
