--- a/distgeneric.ini
+++ b/distgeneric.ini
@@ -2,11 +2,6 @@
 
 #if you are not using .paramnames file, use these lines so parameters named by number
 nparam=2
-#Switches; auto_label labels all parameters by their number
-auto_label = T
-
-#Otherwise columnnum=0 means calculated automatically from .paramnames
-#columnnum = 0
 
 file_root = chains/test
 out_root = 
@@ -14,7 +9,7 @@ out_dir =
 plot_data_dir = plot_data/
 
 #If 0 assume 1 and no chain filename prefixes
-chain_num = 8
+chain_num = 
 first_chain = 
 exclude_chain = 
 
@@ -22,35 +17,12 @@ exclude_chain =
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
 ignore_rows = 0.3
 
-#Number of output bins for plotting, and relative scale of the Gaussian kernel
-#Should check plots are robust to changes in these parameters. 
-num_bins = 100
-num_bins_2D=40
+#If generated chain at higher temperature can cool for computing results
+cool = 1
 
-smooth_scale_1D =0.25
-#if >= 1 smooth by smooth_scale_1D bin widths
-#if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
-#if < 0 uses automatic smoothing length (changes with parameter)
-#-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
+#default settings, can also override in this file if required
+DEFAULT(python/getdist/analysis_defaults.ini)
 
-#For 2D this is the smoothing scale relative to the bin size
-smooth_scale_2D =2
-
-#for 3d plots
-max_scatter_points = 2000
-
-#if T produced B&W printer friendly output
-B&W = F
-
-plot_ext = py
-
-#version of MatLab you are using if plot_ext=m
-matlab_version = 7
-
-#To make e.g. 1D plots automatically uncomment this
-#finish_run_command= matlab < %ROOTNAME%.m
-
-no_plots = F
 no_tests = F
 #samples_are_chains = F can be useful for other samples when first two columns not present
 samples_are_chains = T
@@ -59,30 +31,18 @@ samples_are_chains = T
 compare_num = 0
 compare1 = basic6_cmb
 
-line_labels= F
+#settings for output of plot files
+
+no_plots = T
 
 plot_meanlikes = T
-shade_meanlikes = T
+shade_meanlikes = F
 
 # if non-zero, output _thin file, thinned by thin_factor
 thin_factor = 0
 #Do probabilistic importance sampling to single samples
 make_single_samples = F
 single_thin = 4
-
-#Do simple importance sampling
-adjust_priors = F
-#Map parameters to other derived quantities
-map_params = F
-
-num_contours = 2
-contour1 = 0.68
-contour2 = 0.95
-
-#If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
-#of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
-#Note credible interval depend on smoothing
-credible_interval_threshold = 0.05
 
 #if we only want 2D plots agains a particular variable
 plot_2D_param = 0
@@ -138,5 +98,3 @@ parameter_names =
 #params_generic.paramnames
 
 
-#If generated chain at higher temperature can cool for computing results
-cool = 1
