--- a/python/getdist/distparam_template.ini
+++ b/python/getdist/distparam_template.ini
@@ -1,8 +1,9 @@
-#Params for "getdist" - for processing .txt chain information
+#Samlple parameter file for "GetDist" script (for processing .txt chain files from command line)
 
 #if you are not using .paramnames file, use these lines so parameters named by number
-nparam=2
+nparam=
 
+#Can set file_root here, or in GetDist command line as second parameter
 file_root = chains/test
 out_root = 
 out_dir = 
@@ -15,13 +16,12 @@ exclude_chain =
 
 #For disgarding burn-in if using raw chains
 #if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
-ignore_rows = 0.3
+ignore_rows = 0
 
 #If generated chain at higher temperature can cool for computing results
 cool = 1
 
-#default settings, can also override in this file if required
-DEFAULT(python/getdist/analysis_defaults.ini)
+%%%ANALYSIS_DEFAULTS%%%
 
 #set no_tests=T not to compute or output convergence statistics 
 no_tests = F
@@ -43,7 +43,7 @@ plot_2D_param =
 
 #if above not set, instead plot just these combinations:
 #if both zero it will plot most correlated variables
-plot_2D_num = 1
+plot_2D_num = 0
 plot1 = param1 param2
 plot2 =
 
