getdist updates and fixes, v0.2.2

--- a/python/getdist/distparam_template.ini
+++ b/python/getdist/distparam_template.ini
@@ -7,7 +7,8 @@ nparam=
 file_root = chains/test
 out_root = 
 out_dir = 
-plot_data_dir = plot_data/
+#Set plot_data_dir if you want to pre-compute densities and output to files
+#plot_data_dir = plot_data/
 
 #If 0 assume 1 and no chain filename prefixes
 chain_num = 
