--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ chains/
 x64/
 Debug/
 Release/
+DebugMPI/
+ReleaseMPI/
 *.suo
-*.pyc
 *.asv
 *.u2d
 *.user
@@ -24,4 +25,25 @@ data/clik
 cosmomc
 cosmomc_debug
 CosmoMC/
+
+*.py[cod]
+*$py.class
 __pycache__/
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
