Add getdist API documnetation and docstrings; various API tidies

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -2,9 +2,10 @@
 #Also used for 2D plots, but only number set by plot settings actually shown
 contours = 0.68 0.95 0.99
 
-#If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
-#of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
-#Note credible interval depends on smoothing
+#If the distribution is skewed, so two probability of tails differs by more 
+#than credible_interval_threshold of the peak value, use equal-probability limits 
+#rather than integrating inwards equally at both tails.
+#Note credible interval depends on density estimation parameters
 credible_interval_threshold = 0.05
 
 #Determine bounds from projected ND confidence range for contours[ND_contour_range]
@@ -18,13 +19,13 @@ range_confidence = 0.001
 #Confidence limit to use for convergence tests (splits and Raftery Lewis)
 converge_test_limit = 0.95
 
-#Number of bins for 1D plots
-num_bins = 100
+#Sample binning for 1D plots
 fine_bins = 1024
 
-#if -1: set smoothing bandwidth automatically for each parameter
+#if -1: set optimized smoothing bandwidth automatically for each parameter
 #if >= 1: smooth by smooth_scale_1D bin widths
-#if > 0  and <1: smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.5 is often good)
+#if > 0  and <1: smooth by Gaussian of smooth_scale_1D standard deviations in each parameter
+#                (around 0.2-0.5 is often good)
 #if < 0: automatic, with the overall smoothing length scaled by abs(smooth_scale_1D) from default
 smooth_scale_1D =-1
 
@@ -33,26 +34,30 @@ smooth_scale_1D =-1
 #2 is a higher order kernel, that also affects estimates way from the boundary (1D only)
 boundary_correction_order=1
 
-#Correct for (e.g. variance) biases by re-estimating using fhat  Win (x) (P/fhat)
-#where fhat is the first (previous) estimate, and Win (x) P is simple kernel density estimate
-#Can do mult_bias_correction_order iterations, but may not converge;
-#Not automatic bandwidth accounts for this by increasing the smoothing scale as mult_bias_correction_order increases
+#Correct for (over-smoothing) biases using multiplicative bias correction
+#i.e. by interating estimates using the re-weighted 'flattened' bins
+#Note that automatic bandwidth accounts for this by increasing the smoothing scale
+#as mult_bias_correction_order increases (may not converge for large values).
 mult_bias_correction_order = 1
 
-#output bins for plotting
-num_bins_2D=40
-
-#output bins for 2D plotting
-fine_bins_2D = 256
-
-#if -1: automatic bandwidth selection
-#if >= 1: smooth by smooth_scale_1D bin widths
-#if > 0  and <1: smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.3-0.7 is often good)
-#if < 0: automatic, with the overall smoothing length scaled by abs(smooth_scale_1D) from default
+#if -1: automatic optimized bandwidth matrix selection
+#if >= 1: smooth by smooth_scale_2D bin widths
+#if > 0  and <1: smooth by Gaussian of smooth_scale_2D standard deviations in each parameter
+#                (around 0.3-0.7 is often good)
+#if < 0: automatic, with the overall smoothing length scaled by abs(smooth_scale_2D) from default
 smooth_scale_2D = -1
 
 #maximum correlation ellipticity to allow for 2D kernels. Set to 0 to force non-elliptical.
 max_corr_2D = 0.99
 
-#number of points for 3d plots
+#sample binning in each direction for 2D plotting
+fine_bins_2D = 256
+
+#maximum number of points for 3D plots
 max_scatter_points = 2000
+
+#output bins for 1D plotting (only for GetDist.py output to files, or scale if smooth_scale_2D>1) 
+num_bins = 100
+
+#output bins for 2D plotting (not used, just scale if smooth_scale_2D>1) 
+num_bins_2D=40
