--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -1,3 +1,8 @@
+#Default fraction of rows to remove as burn in by default 
+#(ignored when parameter grid or chain .properties.ini settings are explicitly set)
+#e.g. set to 0.3 if using raw non-grid chains you just generated yourself
+ignore_rows = 0
+
 #Confidence limits for marginalized constraints.
 #Also used for 2D plots, but only number set by plot settings actually shown
 contours = 0.68 0.95 0.99
@@ -61,3 +66,4 @@ num_bins = 100
 
 #output bins for 2D plotting (not used, just scale if smooth_scale_2D>1) 
 num_bins_2D=40
+
