Fixes for unbinned CMBlikes likelihoods; GUI file reload also invalidates caches; added ignore_rows to analysis_defaults

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -1,6 +1,6 @@
-#Default fraction of rows to remove as burn in by default 
+#For disgarding burn-in if using raw chains
+#if < 1 interpreted as a fraction of the total number of rows (0.3 ignores first 30% of lines)
 #(ignored when parameter grid or chain .properties.ini settings are explicitly set)
-#e.g. set to 0.3 if using raw non-grid chains you just generated yourself
 ignore_rows = 0
 
 #Confidence limits for marginalized constraints.
