--- a/python/getdist/distparam_template.ini
+++ b/python/getdist/distparam_template.ini
@@ -58,6 +58,12 @@ triangle_params =
 #Parameters to use. If not specified use all parameters which have labels.
 #plot_params = param1 param2 param3
 
+#Output ND posteriors for selected parameters
+dump_ND_bins = F
+num_bins_ND = 10
+ND_params = param1 param2 param3 param4
+
+
 #If need to give limits on derived parameters if prior cuts off distribution where not very small
 #For most parameters these are handled automatically from the input chain .ranges file
 #limits[myparam]= 0 N
