--- a/batch2/BAO.ini
+++ b/batch2/BAO.ini
@@ -1,7 +1,8 @@
 use_BAO=T
 
 #filenames for BAO data sets
-DEFAULT(BAODR11.ini)
+#DEFAULT(BAODR11.ini)
+DEFAULT(BAODR12.ini)
 bao_dataset[6DF] = data/sdss_6DF_bao.dataset
 bao_dataset[MGS] = data/sdss_MGS_bao.dataset
 
