--- a/batch2/BAODR12_RSD.ini
+++ b/batch2/BAODR12_RSD.ini
@@ -3,5 +3,6 @@ use_BAO=T
 bao_dataset[DR12CMASSRSD] = data/sdss_DR12CMASS_RSD_bao.dataset
 bao_dataset[DR12LOWZRSD] = data/sdss_DR12LOWZ_RSD_bao.dataset
 
-bao_dataset[6DF] = data/sdss_6DF_bao.dataset
-bao_dataset[MGS] = data/sdss_MGS_bao.dataset
+bao_dataset[DR12CMASS] =
+bao_dataset[DR12LOWZ] = 
+DEFAULT(BAO.ini)
