--- a/test_planck.ini
+++ b/test_planck.ini
@@ -12,5 +12,7 @@ DEFAULT(test.ini)
 #Uncomment if you want to include priors even when parameters fixed
 #include_fixed_parameter_priors = T
 
-#expected result for -(log like)
-test_check_compare = 5859.141
+#expected result for -(log like) [note different from master, but C_L very similar]
+test_check_compare = 5860.666
+
+ 
