--- a/batch3/params_CMB_defaults.ini
+++ b/batch3/params_CMB_defaults.ini
@@ -1,5 +1,3 @@
-#New for 2014
-#no zre prior in chains, can do later by importance sampling
 use_min_zre = 0
 
 lmin_store_all_cmb = 2500
@@ -30,8 +28,9 @@ param[theta] = 1.0411 0.5 10 0.0004 0.0002
 param[tau] = 0.09 0.01 0.8 0.01 0.005
 
 
-neutrino_hierarchy = degenerate
-num_massive_neutrinos=1
+#normal hierarchy uses one distinact eigenstate approximation for 0.06, two for mnu>0.06
+#set neutrino_hierarchy = degenerate to use three of equal mass (as 2013/2015 for mnu<>0.06)
+neutrino_hierarchy = normal
 param[mnu] = 0.06
 param[meffsterile] = 0
 
