--- a/test.ini
+++ b/test.ini
@@ -19,8 +19,8 @@ DEFAULT(batch2/common.ini)
 
 #e.g. to vary r in addition to standard 6:
 #(for r>0 also need compute_tensors=T)
-compute_tensors = T
-param[r] = 0.03 0 2 0.04 0.04
+#compute_tensors = T
+#param[r] = 0.03 0 2 0.04 0.04
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
@@ -34,7 +34,7 @@ root_dir = chains/
 file_root=test
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 0
+action = 4
 
 num_threads = 0
 
