added DR12 BAO_FS and Lya-bao

--- a/test.ini
+++ b/test.ini
@@ -13,7 +13,7 @@ DEFAULT(batch2/lensing.ini)
 #DEFAULT(batch2/WiggleZ_MPK.ini)
 #DEFAULT(batch2/MPK.ini)
 #DEFAULT(batch2/WL.ini)
-DEFAULT(batch2/BAO_FS_DR12.ini)
+#DEFAULT(batch2/BAO_FS_DR12.ini)
 
 #general settings
 DEFAULT(batch2/common.ini)
@@ -35,7 +35,7 @@ root_dir = chains/
 file_root=test
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 0
+action = 4
 
 #expected result for -(log like)
 test_check_compare = 28.337
