--- a/source/Makefile
+++ b/source/Makefile
@@ -42,7 +42,10 @@ ifeq ($(STATIC),YES)
 LAPACKL =  -Wl,--start-group $(MKLROOT)/lib/intel64/libmkl_intel_lp64.a $(MKLROOT)/lib/intel64/libmkl_core.a $(MKLROOT)/lib/intel64/libmkl_intel_thread.a -Wl,--end-group -lpthread -lm
 FFLAGS+=  -axAVX,SEE4.2 -static-intel
 else
+ifneq ($(HOSTNAME),apollo-login)
+#Remove this if your cluster is not uniform (different CPUs)
 FFLAGS += -xHost
+endif
 endif
 endif
 
