Added code for dust and/or sync decorrelation in CMB_BK_Planck.f90
Updated BK14.ini and BKPlanck.ini so that decorrelation will be turned
off by default (correlation parameter fixed to 1).
Added dust and sync correlation parameters to BK14.paramnames and
BKPlanck.paramnames

--- a/batch2/BK14.ini
+++ b/batch2/BK14.ini
@@ -18,6 +18,9 @@
 #   * Most foreground parameters are allowed to vary, with exception of the EE/BB
 #     ratios for dust and synchrotron (not used for B-modes only analysis) and 
 #     dust blackbody temperature, which the data are insensitive to.
+#
+# 2017-09-14 update: Added rho_dust and rho_sync parameters (fixed to 1 by 
+#                    default) for compatibility with BK15 likelihood module.
 
 # BK14 dataset, including Planck and WMAP
 cmb_dataset[BKPLANCK]=%DATASETDIR%BK14/BK14_dust.dataset
@@ -50,6 +53,10 @@ param[EEtoBB_dust] = 2
 param[EEtoBB_sync] = 2
 # dust blackbody temperature [K] -- fixed / very insensitive to this
 param[BBTdust] = 19.6
+# dust correlation ratio between 217 and 353 GHz, ell=80
+param[rho_dust] = 1.0
+# sync correlation ratio between 23 and 33 GHz, ell=80
+param[rho_sync] = 1.0
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
