--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -24,6 +24,9 @@
 #
 # Note: See BKPlanckonly.ini and notes therein to reproduce the 
 #       "fiducial analysis" and variations thereof
+#
+# 2017-09-14 update: Added rho_dust and rho_sync parameters (fixed to 1 by 
+#                    default) for compatibility with BK15 likelihood module.
 
 # Default Planck data split = detector set
 cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_detset_comb_dust.dataset
@@ -60,6 +63,10 @@ param[BBdustsynccorr] = 0.0
 # EE/BB ratios
 param[EEtoBB_dust] = 2
 param[EEtoBB_sync] = 1
+# dust correlation ratio between 217 and 353 GHz, ell=80
+param[rho_dust] = 1.0
+# sync correlation ratio between 23 and 33 GHz, ell=80
+param[rho_sync] = 1.0
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
