faster CMB likes and BKplanck likelihood; BK14 is now fast and can be  used with sampling_method=7 (dragging)

--- a/batch2/BK14.ini
+++ b/batch2/BK14.ini
@@ -22,6 +22,9 @@
 # BK14 dataset, including Planck and WMAP
 cmb_dataset[BKPLANCK]=%DATASETDIR%BK14/BK14_dust.dataset
 
+#Likelihood is quite fast and has nuisance parameters, can use fast-slow tricks
+cmb_dataset_speed[BKPLANCK] = 1
+
 # Choose all frequencies, B-modes only.
 cmb_dataset[BKPLANCK,maps_use] = BK14_95_B BK14_150_B W023_B P030_B W033_B P044_B P070_B P100_B P143_B P217_B P353_B
 
