--- a/batch2/caterina.ini
+++ b/batch2/caterina.ini
@@ -16,9 +16,9 @@ INCLUDE(plik_v18_priors.ini)
 ####################
 
 ####SZ prior
-linear_combination[SZComb] = aksz asz143
-linear_combination_weights[SZComb] = 1 1.6
-prior[SZComb] = 9.5 3
+#linear_combination[SZComb] = aksz asz143
+#linear_combination_weights[SZComb] = 1 1.6
+#prior[SZComb] = 9.5 3
 
 
 ####Calibrations and Foregrounds
