final bugged version

--- a/batch2/caterina2.ini
+++ b/batch2/caterina2.ini
@@ -39,8 +39,7 @@ cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_detset_comb_dust.dataset
 # cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_year_comb_dust.dataset
 
 # Choose B2+KECK, P217 and P353 B-modes
-cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
-
+cmb_dataset[BKPLANCK,maps_use] = BK14_95_B BK14_150_B W023_B P030_B W033_B P044_B P070_B P100_B P143_B P217_B P353_B
 # Use first five ell bins.
 cmb_dataset[BKPLANCK,use_min] = 1
 cmb_dataset[BKPLANCK,use_max] = 5
