--- a/batch2/test_bc.ini
+++ b/batch2/test_bc.ini
@@ -30,17 +30,26 @@
 
 DEFAULT
 INCLUDE(common.ini)
-file_root=chains/caterina
+file_root=chains/test_bc
+
+
+param[gamma_150] =  0 -0.5 0.5 0.04 0.02
+prior[gamma_150] =  0  0.02
+param[gamma_95] =  0 -0.5 0.5 0.04 0.02
+prior[gamma_95] =  0  0.02
+param[gamma_220] =  0 -0.5 0.5 0.04 0.02
+prior[gamma_220] =  0  0.02
+param[gamma_corr] =  0 -0.5 0.5 0.04 0.02
+prior[gamma_corr] =  0  0.02
 
 # Default Planck data split = detector set
-cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_detset_comb_dust.dataset
+cmb_dataset[BKPLANCK]=%DATASETDIR%BK15/BK15_dust_sim092.dataset
 # Switch to year split if you want to include Planck LFI channels 
 # (as in synchrotron item of Section III.C)
 # cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_year_comb_dust.dataset
 
 # Choose B2+KECK, P217 and P353 B-modes
-cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
-
+cmb_dataset[BKPLANCK,maps_use] = BK15_95_B BK15_150_B BK15_220_B W023_B P030_B W033_B P044_B P070_B P100_B P143_B P217_B P353_B
 # Use first five ell bins.
 cmb_dataset[BKPLANCK,use_min] = 1
 cmb_dataset[BKPLANCK,use_max] = 5
