modified test file batch2/test_bc.ini

--- a/batch2/test_bc.ini
+++ b/batch2/test_bc.ini
@@ -43,7 +43,7 @@ param[gamma_corr] =  0 -0.5 0.5 0.04 0.02
 prior[gamma_corr] =  0  0.02
 
 # Default Planck data split = detector set
-cmb_dataset[BKPLANCK]=%DATASETDIR%BK15/BK15_dust_sim092.dataset
+cmb_dataset[BKPLANCK]=%DATASETDIR%BK15_simd/BK15_dust_sim092.dataset
 # Switch to year split if you want to include Planck LFI channels 
 # (as in synchrotron item of Section III.C)
 # cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_year_comb_dust.dataset
