--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -3,12 +3,16 @@
 #(ignored when parameter grid or chain .properties.ini settings are explicitly set)
 ignore_rows = 0
 
+#Minimum-weight sample to keep, as ration to the maximum weight sample.
+#This avoids very wide ranges of parameters (much wider than the posterior), e.g. when using nested sampling
+min_weight_ratio =  1e-30
+
 #Confidence limits for marginalized constraints.
 #Also used for 2D plots, but only number set by plot settings actually shown
 contours = 0.68 0.95 0.99
 
-#If the distribution is skewed, so two probability of tails differs by more 
-#than credible_interval_threshold of the peak value, use equal-probability limits 
+#If the distribution is skewed, so two probability of tails differs by more
+#than credible_interval_threshold of the peak value, use equal-probability limits
 #rather than integrating inwards equally at both tails.
 #Note credible interval depends on density estimation parameters
 credible_interval_threshold = 0.05
@@ -61,9 +65,9 @@ fine_bins_2D = 256
 #maximum number of points for 3D plots
 max_scatter_points = 2000
 
-#output bins for 1D plotting (only for GetDist.py output to files, or scale if smooth_scale_2D>1) 
+#output bins for 1D plotting (only for GetDist.py output to files, or scale if smooth_scale_2D>1)
 num_bins = 100
 
-#output bins for 2D plotting (not used, just scale if smooth_scale_2D>1) 
+#output bins for 2D plotting (not used, just scale if smooth_scale_2D>1)
 num_bins_2D=40
 
