--- a/camb/Makefile_main
+++ b/camb/Makefile_main
@@ -19,14 +19,12 @@ DRIVER        ?= inidriver.F90
 Release: OUTPUT_DIR = Release
 Debug: OUTPUT_DIR = Debug
 
-Release: PYCAMB_OUTPUT_DIR = pycamb/camb
 Release: DLL_DIR = Releaselib
 Debug: DLL_DIR = Debuglib
 
 OUTPUT_DIR ?= Release
 PYCAMB_OUTPUT_DIR ?= pycamb/camb
 DLL_DIR ?= Releaselib
-
 
 
 CAMBLIB       = $(OUTPUT_DIR)/libcamb_$(RECOMBINATION).a
@@ -51,7 +49,7 @@ CAMBSO       =  $(DLL_DIR)/constants.o  $(DLL_DIR)/utils.o $(EXTCAMBFILES)  $(DL
 	$(DLL_DIR)/$(NONLINEAR).o $(DLL_DIR)/lensing.o $(DLL_DIR)/$(BISPECTRUM).o $(DLL_DIR)/cmbmain.o \
 	$(DLL_DIR)/camb.o $(DLL_DIR)/camb_python.o
 
-F90CRLINK ?= -lstdc++
+#F90CRLINK ?= -lstdc++
 
 ## CosmoRec
 ifeq ($(RECOMBINATION),cosmorec)
@@ -59,7 +57,7 @@ COSMOREC_PATH ?=../CosmoRec/
 GSL_LINK ?=-lgsl -lgslcblas
 camb: libCosmoRec.a
 $(CAMBLIB): libCosmoRec.a
-F90CRLINK += -L$(COSMOREC_PATH) -lCosmoRec $(GSL_LINK)
+F90CRLINK += -L$(COSMOREC_PATH) -lCosmoRec $(GSL_LINK) -lstdc++
 endif
 
 
@@ -153,6 +151,10 @@ clean:
 	rm -f *.o *.a *.d core *.mod $(OUTPUT_DIR)/*.o $(OUTPUT_DIR)/*.mod
 	rm -rf Release*
 	rm -rf Debug*
+
+delete:
+	rm -f camb	
+	rm -f pycamb/camb/*.so
 
 ## CosmoRec make parts
 cleanCR:
