--- a/batch2/BK15.ini
+++ b/batch2/BK15.ini
@@ -25,6 +25,10 @@
 
 # BK15 dataset, including Planck and WMAP
 cmb_dataset[BKPLANCK]=data/BK15/BK15_dust.dataset
+
+#Likelihood is quite fast and has nuisance parameters, can use fast-slow tricks
+cmb_dataset_speed[BKPLANCK] = 1
+
 # Choose all frequencies, B-modes only.
 cmb_dataset[BKPLANCK,maps_use] = BK15_95_B BK15_150_B BK15_220_B W023_B P030_B W033_B P044_B P070_B P100_B P143_B P217_B P353_B
 
