--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ install:
   - chmod +x tests/run_tests.sh
       
 script:
-  - docker run -v $(pwd):/cosmomc -e TRAVIS_BRANCH -t cmbant/cosmobox /bin/bash -c "/cosmomc/tests/run_tests.sh"
+  - docker run -v $(pwd):/cosmomc -e TRAVIS_BRANCH -t cmbant/cosmobox:devel /bin/bash -c "/cosmomc/tests/run_tests.sh"
 
