--- a/test.ini
+++ b/test.ini
@@ -1,21 +1,20 @@
 #general settings
-#Bicep-Keck-Planck, varying cosmological parameters
-DEFAULT(batch2/BKPlanck.ini)
+#Bicep-Keck-Planck 2014, varying cosmological parameters
+DEFAULT(batch3/BK14.ini)
 
 #Planck 2015, default just include native likelihoods (others require clik)
 #DEFAULT(batch2/plik_dx11dr2_HM_v18_TT.ini)
 #DEFAULT(batch2/lowTEB.ini)
 #DEFAULT(batch2/lowl.ini)
-DEFAULT(batch2/lensing.ini)
+
+#Planck 2018 
+DEFAULT(batch3/lensing.ini)
 
 #Other Likelihoods
-#DEFAULT(batch2/BAO.ini)
-#DEFAULT(batch2/WiggleZ_MPK.ini)
-#DEFAULT(batch2/MPK.ini)
-#DEFAULT(batch2/WL.ini)
+#DEFAULT(batch3/BAO.ini)
 
 #general settings
-DEFAULT(batch2/common.ini)
+DEFAULT(batch3/common.ini)
 
 #e.g. to vary r in addition to standard 6:
 #(for r>0 also need compute_tensors=T)
