--- a/batch2/BK14.ini
+++ b/batch2/BK14.ini
@@ -19,7 +19,9 @@
 #     ratios for dust and synchrotron (not used for B-modes only analysis) and 
 #     dust blackbody temperature, which the data are insensitive to.
 #
-# 2017-09-14 update: Added rho_dust and rho_sync parameters (fixed to 1 by 
+# 2017-09-14 update: Added Delta_dust and Delta_sync parameters (fixed to 1 by 
+#                    default) for compatibility with BK15 likelihood module.
+# 2018-08-30 update: Added band center error (gamma) parameters (fixed to 0 by
 #                    default) for compatibility with BK15 likelihood module.
 
 # BK14 dataset, including Planck and WMAP
@@ -57,9 +59,16 @@ param[EEtoBB_sync] = 2
 # dust blackbody temperature [K] -- fixed / very insensitive to this
 param[BBTdust] = 19.6
 # dust correlation ratio between 217 and 353 GHz, ell=80
-param[rho_dust] = 1.0
+param[Delta_dust] = 1.0
 # sync correlation ratio between 23 and 33 GHz, ell=80
-param[rho_sync] = 1.0
+param[Delta_sync] = 1.0
+# Band center errors, fixed to zero
+param[gamma_corr] = 0.0
+param[gamma_95] = 0.0
+param[gamma_150] = 0.0
+param[gamma_220] = 0.0
+# Note that gamma_220 parameter doesn't do anything for BK14, because
+# there is no 220 GHz channel!
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
